Chapter 7 - Getting access to Pods through an Ingress/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
 name: service-blue
spec:
  type: ClusterIP
  selector:
    color: blue
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
