Chapter 7 - Getting access to Pods through an Ingress/service-green.yaml
apiVersion: v1
kind: Service
metadata:
 name: service-green
spec:
  type: ClusterIP
  selector:
    color: green
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
