Chapter 7 - Getting access to Pods through an Ingress/service-red.yaml
apiVersion: v1
kind: Service
metadata:
 name: service-red
spec:
  type: ClusterIP
  selector:
    color: red
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
