Chapter 7 - Getting access to Pods through an Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: color-ingress
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /hello 
  nginx.ingress.kubernetes.io/affinity: cookie
  nginx.ingress.kubernetes.io/session-cookie-name: MY_COOKIE
spec:
 rules:
    - host: red.app.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-red
              port:
                number: 8080
    - host: blue.app.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-blue
              port:
                number: 8080
    - host: green.app.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-green
              port:
                number: 8080
